# registries-solana

./: .gitignore  Anchor.toml  Cargo.toml  README.md  package.json  setup-env.sh  validator.sh
programs/registries/: Cargo.toml
programs/registries/src/: context.rs  errors.rs  events.rs  lib.rs
programs/registries/src/state/: config.rs  mod.rs  service.rs
